# sparklite-client

./: Cargo.toml  DESIGN.md  README.md
src/: dataset.rs  http.rs  lib.rs  main.rs  message.rs
tests/: basic.rs
tests/connector/: mod.rs
