[package]
name = "sparklite-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.25", features = ["client", "http1", "tcp"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "time"] }
tower = { version = "0.4.13", features = ["util"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
turmoil = "0.5.3"
